agregado poder ordenar tabla productos

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,8 @@ a {
 .form-add-product {
 	display: inline;
 }
+
+#products_table thead {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.2);
+}
