--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,6 +44,7 @@
 
   <script type="text/javascript" src="/javascripts/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="/javascripts/bootstrap.js"></script>
+  <script type="text/javascript" src="/javascripts/jquery.tablesorter.js"></script>
   <script type="text/javascript" src="/javascripts/main.js"></script>
   </body>
 </html>
