Funcionando el filtro de productos

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,9 +1,9 @@
 <div class="container">
 	<p class="error"></p>
-	<div class="row">
+	<div class="row encabezado">
 		<h2>Listado de productos</h2>
-		<div class="col-sm-3">
-			<input type="text" name="code_filter" id="code_filter" placeholder="filtrar por codigo" class="form-control">
+		<div class="col-sm-6 col-sm-offset-6 form-group">
+			<input type="text" name="code_filter" id="code_filter" placeholder="filtrar por codigo o nombre" class="form-control">
 		</div>
 	</div>
 	<div class="row">
