--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,13 @@
                 <li><a href="/newproduct">Nuevo Producto</a></li>
               </ul>
             </li>
-            <li><a href="/providers">Proveedores</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proveedores <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/providers">Lista</a></li>
+                <li><a href="/newprovider">Nuevo</a></li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ventas <span class="caret"></span></a>
               <ul class="dropdown-menu">
